# RayTracer

./: CMakeLists.txt  Cube copy.cpp  Cube.cpp  Cylinder.cpp  DirectionalLightSource.cpp  DirectionalLightSource.h  ImageDisplay.cpp  ImageDisplay.h  Octahedron.cpp  Octahedron.h  Plane.cpp  README.md  RayTracer.rar  Raytracer Report.docx  Scene.cpp  Scene.h  SceneReader.cpp  SpotLightSource.cpp  SpotLightSource.h  build.rar  rayTracerMain.cpp  snowman.txt  test.txt  ~$ytracer Report.docx
docs/html/: _ambient_light_source_8cpp.html  _ambient_light_source_8h.html  _ambient_light_source_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _colour_8cpp.html  _colour_8h.html  _colour_8h_source.html  _colour_component_8h_source.html  _cube_8cpp.html  _cube_8h.html  _cube_8h_source.html  _cylinder_8cpp.html  _cylinder_8h.html  _cylinder_8h_source.html  _direction_8cpp.html  _direction_8h.html  _direction_8h_source.html  _directional_light_source_8cpp.html  _directional_light_source_8h.html  _directional_light_source_8h_source.html  _form0.eps  _form0.ps  _formulas.dvi  _formulas.tex  _image_component_8h_source.html  _image_display_8cpp.html  _image_display_8h.html  _image_display_8h_source.html  _light_source_8cpp.html  _light_source_8h.html  _light_source_8h_source.html  _material_8cpp.html  _material_8h.html  _material_8h_source.html  _material_component_8h_source.html  _matrix_8cpp.html  _matrix_8h.html  _matrix_8h_source.html  (+432 more)
scenes/: lighting.txt  mirror.txt  sampleScene.txt  snowman.txt  spotlight.txt
scenes/additional/: test.txt
(+96 files in other folders)
